html fixes and updated to nav on mobile

--- a/css/media.css
+++ b/css/media.css
@@ -134,10 +134,6 @@
 }
 
 @media (max-width: 800px) {
-  nav {
-    padding: 20px;
-  }
-
   .nav-links li {
     display: block;
     margin-bottom: 15px;
@@ -148,6 +144,14 @@
     position: absolute;
     background-color: #302e2b;
     margin-left: -20px;
+  }
+
+  .search-mobile {
+    height: 28px;
+  }
+
+  .fa-magnifying-glass {
+    padding: 5px;
   }
 
   .hero-image p {
